--- a/UnivariateLinearRegression.ipynb
+++ b/UnivariateLinearRegression.ipynb
@@ -98,8 +98,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5734447b-8c64-4a15-a67e-e1cbe7fd37e1",
+   "metadata": {},
+   "source": [
+    "# brainstroming how to write a derivative function in python:\n",
+    "\n",
+    "* power rule:\n",
+    "$\\newline$\n",
+    "$ \\frac{d}{dx} [x^n] = nx^{n-1}$\n",
+    "$\\newline$\n",
+    "* product rule:\n",
+    "$\\newline$\n",
+    "$ \\frac{d}{dx} [f(x)\\times g(x)] = f(x)\\times\\frac{d}{dx}(g(x))$\n",
+    "$\\newline$\n",
+    "* quotient rule:\n",
+    "$\\newline$\n",
+    "$\\frac{d}{dx} [\\frac{f(x)}{g(x)}] = \\frac{g(x) \\frac{d}{dx}f(x) - f(x) \\frac{d}{dx} g(x)}{g(x)^2}$\n",
+    "$\\newline$\n",
+    "* chain rule:\n",
+    "$\\newline$\n",
+    "$\\frac{d}{dx} [f(g(x))] = \\frac{d}{dx}(f(g(x)) \\times \\frac{d}{dx}g(x)$\n",
+    "$\\newline$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daf01afb-0f69-4124-9af6-e83d8ee9ca38",
+   "metadata": {},
+   "source": [
+    "gradient descent equation:\n",
+    "\n",
+    "$\\theta_{j} := \\theta_{j} - \\alpha(\\frac{d}{d\\theta_{j}} [J(\\theta_{0}, \\theta_{1}])$\n",
+    "\n",
+    "derivative:\n",
+    "$\\frac{df}{du}(a) = \\frac{f(a + \\delta) - f(a - \\delta)}{2 \\times \\delta}$: definition from the deep learning from scratch book"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 39,
    "id": "7bf74e0b-da45-4c4e-91d3-794aebdde52b",
    "metadata": {},
    "outputs": [],
@@ -112,9 +150,9 @@
     "    \n",
     "    squared_err = 0;\n",
     "    for i in range(size):\n",
-    "        squared_err = theta0 + theta1 * x[i] - y[i]\n",
+    "        squared_err += (theta0 + theta1 * x[i] - y[i])**2\n",
     "        \n",
-    "    return squared_err/size\n",
+    "    return squared_err/(2*size)\n",
     "\n",
     "def squared_error_1(size: int,\n",
     "                  theta0: float,\n",
@@ -124,14 +162,14 @@
     "    \n",
     "    squared_err = 0;\n",
     "    for i in range(size):\n",
-    "        squared_err = (theta0 + theta1 * x[i] - y[i]) * x[i]\n",
+    "        squared_err += (theta0 + theta1 * x[i] - y[i]) * x[i]\n",
     "        \n",
     "    return squared_err/size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 40,
    "id": "47e0f4bb-d732-45b0-a77a-042f1888ee2e",
    "metadata": {},
    "outputs": [],
@@ -142,8 +180,8 @@
     "                     alpha: float = 0.2):\n",
     "    \n",
     "    for i in range(episode):\n",
-    "        temp0 = theta0 - alpha * squared_error_0(len(x_train), theta0, theta1, x_train, y_train);\n",
-    "        temp1 = theta1 - alpha * squared_error_1(len(x_train), theta0, theta1, x_train, y_train);\n",
+    "        temp0 = theta0 - alpha * (1/len(x_train)) * squared_error_0(len(x_train), theta0, theta1, x_train, y_train);\n",
+    "        temp1 = theta1 - alpha * (1/len(x_train)) * squared_error_1(len(x_train), theta0, theta1, x_train, y_train);\n",
     "        theta0 = temp0;\n",
     "        theta1 = temp1;\n",
     "        \n",
@@ -152,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 41,
    "id": "e8824057-e00f-42e7-ac1d-edcf6d39c48b",
    "metadata": {},
    "outputs": [],
@@ -162,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 42,
    "id": "02ad1380-ba3a-445b-8e26-c27a6dcfeffd",
    "metadata": {},
    "outputs": [
@@ -281,7 +319,7 @@
        "[25000 rows x 3 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 43,
    "id": "41465475-b608-4ddd-97a3-796d47438038",
    "metadata": {},
    "outputs": [],
@@ -304,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 44,
    "id": "a05952c4-e9c4-4661-b1c9-b51e644201eb",
    "metadata": {},
    "outputs": [],
@@ -314,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 45,
    "id": "3ac40ee2-b909-4cff-a0b3-a9aaeb5a6a0e",
    "metadata": {},
    "outputs": [
@@ -334,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 52,
    "id": "c2837cab-5305-44af-9722-e0eb2b758784",
    "metadata": {},
    "outputs": [
@@ -342,20 +380,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.02797877]\n",
-      "[1.90452722]\n"
+      "[-1.06412913]\n",
+      "[1.88583993]\n"
      ]
     }
    ],
    "source": [
-    "theta0, theta1 = gradient_descent(0, 0, 200)\n",
+    "theta0, theta1 = gradient_descent(0, 0, 300)\n",
     "print(theta0)\n",
     "print(theta1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 53,
    "id": "889e27e7-5b86-4333-92b8-bd0e612022ee",
    "metadata": {},
    "outputs": [
@@ -363,20 +401,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input height in inches: [65.28324], \n",
-      "predected weight in pounds : [124.36168661], \n",
-      "actual weight in pounds: [124.6847]\n"
+      "input height in inches: [68.84104], \n",
+      "predected weight in pounds : [128.75905307], \n",
+      "actual weight in pounds: [122.8631]\n"
      ]
     }
    ],
    "source": [
-    "hyp = create_model(theta0, theta1, x_test[1200])\n",
-    "print(f'input height in inches: {x_test[1200]}, \\npredected weight in pounds : {hyp}, \\nactual weight in pounds: {y_test[1200]}')"
+    "hyp = create_model(theta0, theta1, x_test[1000])\n",
+    "print(f'input height in inches: {x_test[1000]}, \\npredected weight in pounds : {hyp}, \\nactual weight in pounds: {y_test[1000]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 54,
    "id": "df99f58f-3222-478c-b420-3d37cf2ead2b",
    "metadata": {},
    "outputs": [],
@@ -396,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 55,
    "id": "3f666926-ed69-467f-9799-b09e6c8633f2",
    "metadata": {},
    "outputs": [
@@ -404,7 +442,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "over 5000 data points, there is a squared error difference of 56.27743111472542\n"
+      "over 5000 data points, there is a squared error difference of 53.10301473062418\n"
      ]
     }
    ],
@@ -412,6 +450,94 @@
     "err = test_model(len(x_test), theta0, theta1, x_test, y_test)\n",
     "print(f'over {len(x_test)} data points, there is a squared error difference of {err}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff460014-80fb-4080-92b5-b5fcc6df80aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "757b33fb-8be0-4c38-ad70-0333fa5f5e2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89156dac-77d0-4720-b38c-0661a39a93dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c81e4c4-2e49-4816-ba87-7a8ba1d33046",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "184db399-cfa2-4cee-8d57-62aa6c0c8e46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c8de077-d729-459f-8533-1ec2cc9cc65b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef86d7a0-7064-4c65-be5f-837136d439e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9265c12-d707-4dac-b0ab-b78c3a1afb3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5c36f48-741d-49ff-8550-49883c128987",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2fd01be-92bd-4145-bcb7-1d9d1fe97151",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07ed058c-0c1c-4bfa-931d-9c5ac7f59ed3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
