--- a/UnivariateLinearRegression.ipynb
+++ b/UnivariateLinearRegression.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "id": "7bf74e0b-da45-4c4e-91d3-794aebdde52b",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
     "    for i in range(size):\n",
     "        squared_err += (theta0 + theta1 * x[i] - y[i])\n",
     "        \n",
-    "    return squared_err/(2*size)\n",
+    "    return squared_err/size\n",
     "\n",
     "def squared_error_1(size: int,\n",
     "                  theta0: float,\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 70,
    "id": "47e0f4bb-d732-45b0-a77a-042f1888ee2e",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "id": "e8824057-e00f-42e7-ac1d-edcf6d39c48b",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "id": "02ad1380-ba3a-445b-8e26-c27a6dcfeffd",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
        "[25000 rows x 3 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "id": "41465475-b608-4ddd-97a3-796d47438038",
    "metadata": {},
    "outputs": [],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 74,
    "id": "a05952c4-e9c4-4661-b1c9-b51e644201eb",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 75,
    "id": "3ac40ee2-b909-4cff-a0b3-a9aaeb5a6a0e",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 76,
    "id": "c2837cab-5305-44af-9722-e0eb2b758784",
    "metadata": {},
    "outputs": [
@@ -380,8 +380,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.01364734]\n",
-      "[1.87016914]\n"
+      "[0.02729169]\n",
+      "[1.8699685]\n"
      ]
     }
    ],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "id": "889e27e7-5b86-4333-92b8-bd0e612022ee",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
      "output_type": "stream",
      "text": [
       "input height in inches: [68.84104], \n",
-      "predected weight in pounds : [128.75803587], \n",
+      "predected weight in pounds : [128.75786815], \n",
       "actual weight in pounds: [122.8631]\n"
      ]
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "id": "df99f58f-3222-478c-b420-3d37cf2ead2b",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 79,
    "id": "3f666926-ed69-467f-9799-b09e6c8633f2",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "over 5000 data points, there is a squared error difference of 53.175965584478234\n"
+      "over 5000 data points, there is a squared error difference of 53.176873930569506\n"
      ]
     }
    ],
